<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/layout_text1"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="8dp"
        android:weightSum="5">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonClear"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddSub"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/add_sub" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPer"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/percentage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDiv"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/division" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMulti"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/multiplication" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSub"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/sub" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdd"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/addition" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button0"
                style="@style/numberButton"
                android:layout_weight="2"
                android:backgroundTint="@color/white"
                android:text="@string/zero" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDot"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/dot" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEqual"
                style="@style/numberButton"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/equal" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>