<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/l5_background_border"
        android:padding="5dp"
        android:src="@drawable/kotlin" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B6CDBD"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:textColor="@color/black"
        android:gravity="start"
        android:text="@string/paragraph_2"
        android:textSize="15sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#DCF3FA"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:contentDescription="@string/twelve"
                android:src="@drawable/ic_person"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:contentDescription="@string/three"
                android:background="#A9EAED"
                android:src="@drawable/ic_person"
                android:text="@string/eight" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#ABE4F5"
                android:contentDescription="@string/two"
                android:src="@drawable/ic_person"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="#DBF6F7"
                android:contentDescription="@string/four"
                android:src="@drawable/ic_person"
                android:text="@string/zero" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#71D7F7"
            android:contentDescription="@string/five"
            android:src="@drawable/ic_person"
            android:text="@string/addition" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>

