<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatButton
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/lightBlue"
        android:text="@string/one" />


    <androidx.appcompat.widget.AppCompatButton
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:background="@color/lightBlue"
        android:text="@string/three" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:background="@color/lightBlue"
        android:text="@string/four" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/lightBlue"
        android:text="@string/five" />


    <androidx.appcompat.widget.AppCompatButton
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/lightBlue"
        android:text="@string/six" />


    <androidx.appcompat.widget.AppCompatButton
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/lightBlue"
        android:text="@string/eight" />


</RelativeLayout>