<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview1"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview2"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/two"
        app:layout_constraintEnd_toStartOf="@id/textview1"
        app:layout_constraintTop_toBottomOf="@id/textview1"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview3"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@id/textview1"
        app:layout_constraintTop_toBottomOf="@id/textview1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview4"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/four"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview5"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview6"
        app:layout_constraintStart_toEndOf="@id/textview4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview6"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview7"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@id/textview5"
        app:layout_constraintStart_toStartOf="@id/textview5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview8"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@id/textview7"
        app:layout_constraintEnd_toStartOf="@id/textview7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview9"
        style="@style/custom_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@id/textview7"
        app:layout_constraintStart_toEndOf="@id/textview7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview10"
        style="@style/custom_button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ten"
        app:layout_constraintBottom_toTopOf="@id/textview8"
        app:layout_constraintEnd_toEndOf="@id/textview8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview11"
        style="@style/custom_button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/eleven"
        app:layout_constraintBottom_toTopOf="@id/textview9"
        app:layout_constraintStart_toStartOf="@id/textview9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview0"
        style="@style/custom_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@id/textview7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textviewAdd"
        style="@style/custom_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/addition"
        app:layout_constraintBottom_toTopOf="@id/textview0"
        app:layout_constraintEnd_toStartOf="@id/textview0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textviewSub"
        style="@style/custom_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sub"
        app:layout_constraintBottom_toTopOf="@id/textview0"
        app:layout_constraintStart_toEndOf="@id/textview0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textviewDiv"
        style="@style/custom_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/division"
        app:layout_constraintEnd_toStartOf="@id/textview0"
        app:layout_constraintTop_toBottomOf="@id/textview0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textviewPer"
        style="@style/custom_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/percentage"
        app:layout_constraintStart_toEndOf="@id/textview0"
        app:layout_constraintTop_toBottomOf="@id/textview0" />

</androidx.constraintlayout.widget.ConstraintLayout>